# srg_sim

./: .gitignore  .pre-commit-config.yaml  .todo-sqlite-cli  CLAUDE.md  Cargo.toml  DESIGN.md  FRONTEND_HANDOFF.md  FRONTEND_INTEGRATION_BRIEF.md  FRONTEND_INTEGRATION_RESPONSE.md  FRONTEND_RECORD_RESPONSE.md  Makefile  README.md  about.toml  build.rs  overrides.ir.json  overrides.yaml  pyproject.toml  tasks.py  team_matchups.yaml  todo-sqlite-cli.db
.github/workflows/: ci.yml
decks/: README.md  bull.yaml  d2.yaml  fae.yaml  mastermind-updated.yaml  mastermind-v3.yaml  mastermind.yaml  warehouse.yaml
docs/: Makefile  conf.py  coverage-tail-audit.md  coverage-tail-audit.rst  index.rst
docs/design/: index.rst  open_questions.rst  overview.rst  substrate-split.md  substrate-split.rst
docs/development/: analysis.rst  claude.rst  coverage-grind.rst  environment.rst  index.rst  playing.rst  releasing.rst  reports.rst  workflow.rst
fixtures/conformance/: 001_heuristic_bull_fae_s7.json  002_heuristic_bull_fae_s42.json  003_aggressive_vs_smart_s1.json  004_newbie_vs_smart_s13.json  005_smart_mirror_bull_fae_s99.json  006_heuristic_vanilla_s7.json  007_heuristic_bull_warehouse_s13.json
fixtures/ir/: all_nodes.json  deck_effects.json
fixtures/parser/: clauses.json
fixtures/records/: observer_example.json
fixtures/rng/: splitmix64.json
fixtures/state/: positions.json
mcp_server/: pyproject.toml  server.py
schemas/v1/: decision_protocol.md  effect_ir.schema.json  gamelog.schema.json  match_record.md  match_record.schema.json  observable_state.schema.json
scripts/: gen_cards_ir.py  gen_overrides_ir.py
scripts/srg_ir/: __init__.py  cards.py  effects.py
src/: cards.rs  conditions.rs  engine.rs  error.rs  finish.rs  gamelog.rs  ir.rs  lib.rs  main.rs  parser.rs  policy.rs  record.rs  rng.rs  session.rs  skills.rs  state.rs  stops.rs  wasm.rs
src/console/: commands.rs  loader.rs  mod.rs  record_cmd.rs  repl.rs  session_cmd.rs
srg_sim/: __init__.py  analysis.py  cards.py  cli.py  conditions.py  conformance.py  effects.py  engine.py  finish.py  gamelog.py  interactive.py  loader.py  policy.py  review.py  rng.py  rules_parser.py  schema.py  state.py  stops.py
srg_sim/report/: __init__.py  build.py  carddb.py  classify.py  finishes.py  glance.py  images.py  model.py  overrides.yaml  render.py  skill_cards.yaml  skillreqs.py  turn.py
tests/: cards.rs  conformance_corpus.py  considered_compare.rs  demo_decks.py  during_turn.rs  engine_conformance.rs  engine_scaffold.rs  finish.rs  frontend_no_panic.rs  gamelog.rs  in_play_compare.rs  ir_roundtrip.rs  mimic.rs  parser.rs  parser_parity.rs  play_orders.rs  policy_conformance.rs  record.rs  rng.rs  schema_version.rs  session.rs  skill_delta.rs  smoke.rs  state.rs  stops.rs  test_analysis.py  test_cards.py  test_cli.py  test_conditions.py  test_conformance.py  test_effects.py  test_engine.py  test_finish.py  test_gamelog.py  test_interactive.py  test_loader.py  test_policy.py  test_report.py  test_review.py  test_rng.py  (+7 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: Board.jsx  CardChip.jsx  DecisionPanel.jsx  DiscardStack.jsx
web/src/pkg/: srg_core.js  srg_core_bg.wasm
web/src/sample/: deckA.json  deckB.json
