[package]
name = "srg-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "SRG Supershow match engine — the authoritative, deterministic rules core"
license = "MIT"
authors = ["Brandon Arrendondo"]
repository = "https://github.com/szarta/srg_sim"
homepage = "https://github.com/szarta/srg_sim"
readme = "README.md"
keywords = ["srg", "supershow", "wrestling", "card-game", "simulation"]
categories = ["games", "simulation"]
exclude = [
    "target/",
    "fixtures/",
    "docs/",
    ".github/",
    "about.hbs",
    "about.toml",
]

[lib]
name = "srg_core"
path = "src/lib.rs"

[[bin]]
name = "srg"
path = "src/main.rs"
# The console consumer reads the card DB from YAML; keep that (and its C libyaml
# transitive) out of lib-only / WASM builds — see the `cli` feature below.
required-features = ["cli"]

[features]
default = ["cli"]
# The console CLI: the YAML card-DB loader (`src/console`). Off for lib-only or
# `wasm32` consumers that sync the DB as JSON and never touch `serde_yaml_ng`.
cli = ["dep:serde_yaml_ng"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Exact rational arithmetic for the finish-odds / stop-probability math, so the
# port stays bit-for-bit in parity with the Python `fractions.Fraction` values.
num-rational = { version = "0.4", default-features = false }
# Whole-clause pattern grammar for the rules_text -> Effect IR parser (DESIGN.md §4).
regex = "1"
# Card-DB YAML loader for the console consumer only (optional, `cli` feature).
serde_yaml_ng = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
