[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srg_sim"
version = "0.0.1"
description = "Headless, deterministic Supershow match simulator with a replayable game log"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.8",
    "ruff>=0.6",
    "invoke>=2",
    "build>=1",
    "pre-commit>=3",
    "sphinx>=7",
    "types-PyYAML>=6",
    "jsonschema>=4.20",
    "types-jsonschema>=4.20",
]

[project.scripts]
srg-sim = "srg_sim.cli:main"

[tool.setuptools.packages.find]
include = ["srg_sim*"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["srg_sim", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM flake8-simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true
